--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
+    background-color: #34495e;
   }
   
   h1, h2, h3, h4, h5, h6 {
