--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -6,17 +6,57 @@
 }
 
 .landing-content {
-    margin-top: 150px;
+    margin-top: 130px;
 }
 
 .landing-content h1 {
-    font-size: 45px;
+    font-size: 46px;
     font-weight: bold;
     color: #ecf0f1;
     margin-bottom: 10px;
 }
 
 .landing-content p {
+    margin-top: 50px;
     font-size: 18px;
     color: #ecf0f1;
+}
+
+.landing-content #motivation {
+    margin-top: 30px;
+    font-size: 24px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.landing-content .explore-button {
+    margin-top: 40px;
+    padding: 15px 26px;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.landing-content .explore-button:hover {
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.landing-content .about-us {
+    margin-left: 30px;
+    font-size: 16px;
+    color: #ecf0f1;
+    text-decoration: none;
+    padding: 15px 26px;
+    border: 2px solid #ecf0f1;
+    border-radius: 10px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.landing-content .about-us:hover {
+    background-color: #ecf0f1;
+    color: #2c3e50;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
