--- a/src/components/LandingPage/Header.css
+++ b/src/components/LandingPage/Header.css
@@ -1,13 +1,18 @@
+*{
+    font-family: 'Rubik';
+}
 .header {
     background-color: #34495e;
-    padding: 0px 0;
+    padding: 0px 0px;
 }
 
 .navbar {
     display: flex;
+    /* background-color: red; */
     justify-content: space-between;
     align-items: center;
-    padding: 0 30px;
+    padding: 0px 0px;
+    gap: 110px;
 }
 
 .navbar-left {
@@ -16,11 +21,11 @@
 }
 
 .navbar-brand {
-    font-size: 32px;
+    font-size: 31px;
     font-weight: bold;
     color: #ecf0f1;
     text-decoration: none;
-    margin-left: -20px;
+    margin-left: 0px;
 }
 
 .navbar-center {
@@ -31,33 +36,47 @@
 
 .search-bar {
     width: 100%;
-    max-width: 600px;
-    padding: 10px;
+    min-width: 600px;
+    padding: 11px 11px ;
     font-size: 16px;
-    border: 2px solid #ecf0f1;
-    border-radius: 20px;
+    border: 2px solid #2c3e50;
+    outline: none;
+    border-radius: 8px;
     background-color: #2c3e50;
     color: #ecf0f1;
+    transition: border 0.5s ease;
+
 }
+.search-bar::placeholder{
+    color: #a5a5a5;
+}
+
+    .search-bar:hover{
+        border: 2px solid #acacac;
+        outline: none;
+    }
 
 .navbar-right {
     flex: 1;
     display: flex;
-    justify-content: flex-end;
-    gap: 15px;
+    justify-content: center;
+    /* gap: 15px; */
 }
 
 .nav-link {
     font-size: 16px;
-    color: #ecf0f1;
+    color: #2c3e50;
     text-decoration: none;
     padding: 10px 15px;
     border: 2px solid #ecf0f1;
     border-radius: 10px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    background-color: #ecf0f1;
+    outline: none;
+    transition: all 0.3s ease;
 }
 
 .nav-link:hover {
-    background-color: #ecf0f1;
-    color: #2c3e50;
+    background-color: #2c3e50;
+    color: #ecf0f1;
+    border: 2px solid #2c3e50;
 }
