--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -6,14 +6,14 @@
 }
 
 .landing-content {
-    margin-top: 130px;
+    margin-top: 150px;
 }
 
 .landing-content h1 {
     font-size: 46px;
     font-weight: bold;
     color: #ecf0f1;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .landing-content p {
@@ -23,7 +23,7 @@
 }
 
 .landing-content #motivation {
-    margin-top: 30px;
+    margin-top: 20px;
     font-size: 24px;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -45,6 +45,7 @@
 }
 
 .landing-content .about-us {
+    text-align: center;
     margin-left: 30px;
     font-size: 16px;
     color: #ecf0f1;
