--- a/src/components/LandingPage/ResearchDiscussion.css
+++ b/src/components/LandingPage/ResearchDiscussion.css
@@ -38,6 +38,10 @@
 
 .rectangular-image img {
     max-width: 100%;
+    width: 500px;
+    height: 200px;
+    margin-right: 50px;
+    margin-top: 40px;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
