--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,8 +1,11 @@
 /* src/assets/styles/index.css */
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #34495e;
+    overflow-x: hidden;
+
   }
   
   h1, h2, h3, h4, h5, h6 {
