--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -31,6 +31,7 @@
 .landing-content .explore-button {
     margin-top: 40px;
     padding: 15px 26px;
+    background-color: #ecf0f1;
     font-size: 18px;
     border: none;
     border-radius: 8px;
