--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    /* background-color: #34495e; */
+    background-color: #34495e;
     overflow-x: hidden;
 
   }
